--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,13 @@ test {
 kotlin {
     jvmToolchain(17)
 }
+
+jar {
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+    manifest {
+        attributes "Main-Class": "org.example.MainKt"
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
